tests/e2e/semantics/semi_global_assignment3.error
Error: syntax error in story at line 5, column 5

5|        a = el
          ^^^

E0127: `a` is readonly and can not be assigned to.
