tests/e2e/semantics/semi_global_assignment3.story
# FEAT: globals=False
a = 1
l = [4, 5, 6]
foreach l as el
    a = el
